[package]
name = "secp256kfun_k256_backend"
description = """
backend for secp256kfun based on k256
"""
version = "0.9.6" # track the RustCrypto Version
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/elliptic-curve"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
readme = "README.md"
edition = "2018"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "secp256k1"]

[dependencies]
cfg-if = "1.0"
elliptic-curve = { version = "0.10.6", default-features = false, features = ["hazmat"] }

[dev-dependencies]
hex-literal = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.0"

[features]
default = ["arithmetic"]
arithmetic = ["elliptic-curve/arithmetic"]
expose-field = ["arithmetic"]
